--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <hr/>
 
-   <h3><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"> Movie Ranking Project</a></h3>
+   <h3><a href="./4.3 HTML Porfolio Project/public/movie-ranking.html"> Movie Ranking Project</a></h3>
         <img src="https://github.com/Anusya0205/html-portfolio/assets/133178304/d4df9a70-5909-470e-8b17-175a440353c0" height="200" alt="My Top 3 Movies" />
 
     
-    <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html"> Birthday Invite Project</a></h3>
+    <h3><a href="./4.3 HTML Porfolio Project/public/birthday-invite.html"> Birthday Invite Project</a></h3>
         <img src="https://github.com/Anusya0205/html-portfolio/assets/133178304/96e2752b-fc4b-448c-b25e-5ae3bf63613f" height="200" alt="Birthday Invite" />
    
     <hr/>
 
-    <h3><a href="../4.3 HTML Porfolio Project/public/about.html">About Me </a></h3>
-    <h3><a href="../4.3 HTML Porfolio Project/public/contact.html">Contact Me </a></h3>
+    <h3><a href="./4.3 HTML Porfolio Project/public/about.html">About Me </a></h3>
+    <h3><a href="./4.3 HTML Porfolio Project/public/contact.html">Contact Me </a></h3>
 
 </body>
 </html>
