--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <hr/>
 
-   <h3><a href="https://github.com/nogoblox/pancake/blob/979a79d8c72489e6161c6fef8046ebebca355e5c/public/movie-ranking.html"> Movie Ranking Project</a></h3>
+   <h3><a href="public/movie-ranking.html"> Movie Ranking Project</a></h3>
         <img src="https://github.com/Anusya0205/html-portfolio/assets/133178304/d4df9a70-5909-470e-8b17-175a440353c0" height="200" alt="My Top 3 Movies" />
 
     
