--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <hr/>
 
    <h3><a href="movie-ranking.html"> Movie Ranking Project</a></h3>
-        <img src="https://github.com/Anusya0205/html-portfolio/assets/133178304/d4df9a70-5909-470e-8b17-175a440353c0" height="200" alt="My Top 3 Movies" />
+        <img src="assets/images/movie-ranking.png" height="200" alt="My Top 3 Movies" />
 
     
     <h3><a href="public/birthday-invite.html"> Birthday Invite Project</a></h3>
-        <img src="https://github.com/Anusya0205/html-portfolio/assets/133178304/96e2752b-fc4b-448c-b25e-5ae3bf63613f" height="200" alt="Birthday Invite" />
+        <img src="assets/images/birthday.png" height="200" alt="Birthday Invite" />
    
     <hr/>
 
