--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <hr/>
 
-   <h3><a href="movie-ranking.html"> Movie Ranking Project</a></h3>
+   <h3><a href="public/movie-ranking.html"> Movie Ranking Project</a></h3>
         <img src="assets/images/movie-ranking.png" height="200" alt="My Top 3 Movies" />
 
     
