--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
    
     <hr/>
 
-    <h3><a href="./4.3 HTML Porfolio Project/public/about.html">About Me </a></h3>
-    <h3><a href="./4.3 HTML Porfolio Project/public/contact.html">Contact Me </a></h3>
+    <h3><a href="public/about.html">About Me </a></h3>
+    <h3><a href="public/contact.html">Contact Me </a></h3>
 
 </body>
 </html>
